--- a/text-presentation-feature/src/main/res/layout/banner_item_small.xml
+++ b/text-presentation-feature/src/main/res/layout/banner_item_small.xml
@@ -2,10 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="140dp"
     android:layout_height="160dp"
-    android:background="@drawable/shape">
+    android:background="@drawable/shape"
+    android:foreground="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textColor="?attr/textColorPrimary" />
 </FrameLayout>
