--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources>
-    <style name="Theme.MassiveApp" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.MassiveApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
+        <item name="textColorPrimary">@color/white</item>
     </style>
 </resources>
