--- a/color-setup-feature/src/main/res/layout/color_setup_fragment.xml
+++ b/color-setup-feature/src/main/res/layout/color_setup_fragment.xml
@@ -7,7 +7,8 @@
         android:id="@+id/current_color"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:background="@drawable/shape" />
 
     <Button
         android:id="@+id/change_color_button"
