--- a/text-presentation-feature/src/main/res/layout/text_presentation_fragment.xml
+++ b/text-presentation-feature/src/main/res/layout/text_presentation_fragment.xml
@@ -20,4 +20,8 @@
         android:paddingVertical="@dimen/outer_padding"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </FrameLayout>
